# ai-dubbing-studio-app

./: .gitignore  API_CONTRACT.md  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  PHASE_1_COMPLETION.md  PHASE_4_COMPLETION.md  README.md  TESTING_FILES_MANIFEST.md  TESTING_QUICK_START.md  WORKSTREAM_3_COMPLETION.md  app.py  pyproject.toml  requirements.txt  start.sh
.claude/agents/: backend-architect.md
.claude/commands/: prime.md
.claude/rules/: backend.md  frontend.md
.github/workflows/: backend-tests.yml  claude-code-review.yml
ai_docs/: README.md  text-to-speech-openai-api.md
archive/legacy/: README.md  app.py
backend/: README.md  coverage.json
backend/api/: dependencies.py  main.py
backend/api/routes/: health.py
backend/api/routes/v1/: audio.py
backend/core/: config.py  exceptions.py  logging.py
backend/schemas/: audio.py
backend/services/: audio_converter.py  openai_client.py
backend/tests/: README.md  __init__.py  conftest.py  test_audio_converter.py  test_audio_routes.py  test_config.py  test_exceptions.py  test_file_handlers.py  test_health_routes.py  test_openai_client.py
backend/tests/fixtures/: __init__.py  openai_mocks.py  test_data.py
backend/tests/integration/: __init__.py  test_complete_flows.py
backend/tests/security/: __init__.py  test_input_validation.py
backend/utils/: file_handlers.py
design/: ACCESSIBILITY_CHECKLIST.md  DESIGN_HANDOFF.md  DESIGN_SYSTEM.md  README.md  UI_FLOW_SPEC.md  component-styles.css  design-tokens.css
docs/: API.md  DEPLOYMENT.md  README.md  TESTING.md
docs/development/: CLAUDE_INSTRUCTIONS.md  QUICK_START.md  TESTING_GUIDE.md
docs/history/: CRITICAL_FIXES_IMPLEMENTED.md  FINAL_PROJECT_SUMMARY.md  PHASE_2_COMPLETE.md  TESTING_CHECKLIST.md  TESTING_SUMMARY.md
docs/implementation/: FRONTEND_IMPLEMENTATION.md  FRONTEND_TEST_IMPLEMENTATION.md
frontend/: .gitignore  README.md  TESTING.md  index.html  package-lock.json  package.json  server.py  vitest.config.js
frontend/scripts/: api.js  audio.js  main.js  session.js  theme.js  upload.js  visual-effects.js
frontend/scripts/managers/: AudioProcessingManager.js  FileUploadManager.js  UIFeedbackManager.js  UIStateManager.js
frontend/scripts/services/: HealthCheckService.js
frontend/scripts/utils/: ui-lock.js
frontend/styles/: component-styles.css  layout.css  main.css  visual-refinement.css
frontend/tests/: setup.js
frontend/tests/integration/: app-workflow.test.js
frontend/tests/managers/: AudioProcessingManager.test.js  FileUploadManager.test.js  UIFeedbackManager.test.js  UIStateManager.test.js
frontend/tests/services/: HealthCheckService.test.js
frontend/tests/utils/: ui-lock.test.js
mcp_servers/codex/: client.py  server.py
mcp_servers/gemini/: GEMINI.md  client.py  session_manager.py
scripts/: run-tests.sh
