[project]
name = "ai-dubbing-studio-app"
version = "0.1.0"
description = "AI-powered audio dubbing studio using OpenAI for transcription, translation, and text-to-speech"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "openai>=2.9.0",
    "pydub>=0.25.1",
    "streamlit>=1.52.1",
]
